fix: speak on ios

--- a/style.css
+++ b/style.css
@@ -136,6 +136,7 @@ p {
     cursor: pointer;
     display: inline-flex;
     font-size: 2.4rem;
+    padding: 0 0 0.4rem 0;
 }
 
 .quiz-words {
